--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input type="text" placeholder="email address or phone number">
                 <input type="password" placeholder="password">
                 <button type="submit">log in</button>
-                <a href="#">forgotten password</a>
+                <a href="#">Forgotten password</a>
             </form>
             <hr>
             <div class="create-btn">
